modify wrap with fixed block

--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@
 }
 
 html, body {
-    height: 100%;
+    height: 100vh;
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
@@ -140,17 +140,17 @@ footer img {
 }
 
 #scrollTop {
+    position: fixed;
     display: block;
+    left: 95%;
+    bottom:40%;
     width: 40px;
     height: 40px;
     background-color: burlywood;
-    position:fixed;
-    left: 95%;
-    bottom:10%;
     cursor: pointer;
     text-align: center;
-    line-height: 40px;
+    line-height: 35px;
 }
-#scrollTop a{
+#scrollTop a {
     position: sticky;
 }
